--- a/src/Components/ColorItem/ColorItem.module.scss
+++ b/src/Components/ColorItem/ColorItem.module.scss
@@ -3,21 +3,48 @@
 .wrapper {
   width: 100%;
   height: 100%;
-  border-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
+  padding: 10px;
+  position: relative;
+}
+
+.innerContainer {
+  width: 100%;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.topContainer {
+  justify-content: space-around;
 }
 
 .lockBtn {
-  width: 50px;
-  height: 50px;
-  border-radius: 6px;
+  width: 40px;
+  height: 40px;
+  border-radius: 4px;
   border: none;
   outline: none;
-  background-color: $white20;
-  color: $white;
+  transition: .3s;
+
+  &._dark {
+    background-color: $white20;
+    color: $white;
+  }
+
+  &._light {
+    background-color: $black20;
+    color: $black;
+  }
+
+  &:hover {
+    opacity: 0.5;
+  }
 }
 
 .smallBtn {
@@ -26,8 +53,21 @@
   border-radius: 4px;
   border: none;
   outline: none;
-  background-color: $white20;
-  color: $white;
+  transition: .3s;
+
+  &._dark {
+    background-color: $white20;
+    color: $white;
+  }
+
+  &._light {
+    background-color: $black20;
+    color: $black;
+  }
+
+  &:hover {
+    opacity: 0.5;
+  }
 }
 
 .btnContainer {
@@ -40,14 +80,52 @@
 .colorContainer {
   display: flex;
   align-items: center;
-  justify-content: center;
-  width: 180px;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 200px;
   height: 40px;
   border-radius: 4px;
   background-color: $white20;
-  pointer-events: none;
+  font-family: 'Teko';
+  font-size: 20px;
+  line-height: 18px;
+  letter-spacing: 1px;
+
+  &._dark {
+    background-color: $white20;
+    color: $white;
+  }
+
+  &._light {
+    background-color: $black20;
+    color: $black;
+  }
 }
 
 .color {
-  color: $white;
+  display: block;
+  flex: 1;
+  text-align: center;
+}
+
+.colorBtn {
+  width: 40px;
+  height: 40px;
+  border-radius: 4px;
+  border: none;
+  outline: none;
+  transition: .3s;
+  background-color: transparent;
+
+  &:hover {
+    opacity: 0.5;
+  }
+
+  &._dark {
+    color: $white;
+  }
+
+  &._light {
+    color: $black;
+  }
 }
