--- a/src/Screens/MainScreen/MainScreen.module.scss
+++ b/src/Screens/MainScreen/MainScreen.module.scss
@@ -10,12 +10,48 @@
   width: 100%;
   padding: 15px 0;
   border-bottom: 2px solid $white;
+
+  &Container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  &Btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    border: none;
+    background-color: $white20;
+    border-radius: 4px;
+    color: $white;
+    height: 40px;
+    width: 140px;
+    font-family: 'Jost';
+    text-transform: uppercase;
+    transition: .3s;
+
+    &:hover {
+      opacity: 0.5;
+    }
+  }
+}
+
+.addBtn {
+  width: 40px;
+}
+
+.btnBox {
+  display: flex;
+  align-items: center;
+  gap: 15px;
 }
 
 .listWrapper {
   flex: 1;
   display: flex;
-  padding: 15px;
+  overflow-x: auto;
 }
 
 .colorList {
@@ -24,10 +60,27 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-  gap: 15px;
   flex: 1;
 }
 
-.colorItem {
-  
+.toast {
+  position: fixed;
+  top: -40px;
+  background-color: $white;
+  color: $black;
+  font-family: 'Jost';
+  font-size: 16px;
+  width: 100px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  left: calc(50% - 50px);
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+  transition: .3s;
+
+  &._active {
+    top: 0px;
+  }
 }
