--- a/src/_сonstant.scss
+++ b/src/_сonstant.scss
@@ -2,3 +2,6 @@ $darckGrey: rgb(25, 25, 25);
 $white: rgb(255, 255, 255);
 $white50: rgba(255, 255, 255, 0.5);
 $white20: rgba(255, 255, 255, 0.2);
+$black: rgb(20, 20, 20);
+$black50: rgba(20, 20, 20, 0.5);
+$black20: rgba(20, 20, 20, 0.2);
