--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,10 @@
 @import-normalize;
 @import './сonstant';
+@import './fonts';
+
+* {
+  box-sizing: border-box;
+}
 
 body {
   margin: 0;
@@ -9,6 +14,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: 'Jost';
 }
 
 code {
